section34_pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: draining-node-test-pod
    labels:
        tier: frontend
spec:
    containers:
    - name: nginx
      image: nginx:latest
      ports:
      - containerPort: 80
    restartPolicy: OnFailure

# Execute on HA SETUP Master node
# Section 34 Lab Number 212

# steps
# 1) Go to directory where scripts are stored, cd <diretory_name>
# 2) Go to vi editor and name it using pod.yaml
# 3) copy the content from above and save the file.
# 4) create a pod, kubectl apply -f <file-name.yml>
# 5) check if pod is created, kubectl get pods
# 6) check describe of pod, kubectl desribe pod <pod-name>
# 7) Command to drain the worker nodes
#   kubectl drain <worker-node-name> --ignore-daemonsets --force
# 8) Command to attch node back
#  kubectl uncordon <worker-node-name>
