section36_configmap-env-demo.yml
apiVersion: v1
kind: Pod
metadata:
  name: saf-configmap-env-demo
spec:
  containers:
    - name: configmap-demo
      image: alpine
      command: ["sleep", "3600"]
